--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "@pptik/galileo",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "Reusable properties yang digunakan untuk mendukung proses development di Node.js",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": "github:pptik/galileo",
   "author": "Mohamad Radisha <pr0ph0z23@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "date-fns": "^2.15.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.8",
+    "@types/node": "^14.6.4",
+    "express": "^4.17.1",
+    "ts-node": "^9.0.0",
+    "tslib": "^2.0.1",
+    "typescript": "^4.0.2"
   }
 }
